# hello-haskell

./: CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hello-haskell.cabal
src/: MyLib.hs
