cabal-version:      3.0
name:               hello-haskell
version:            1.0.0.0
synopsis:           A minimal Haskell project
homepage:           https://github.com/sgillespie00/hello-haskell
license:            MIT
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable hello-haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        hello-haskell

    hs-source-dirs:   app
    default-language: Haskell2010
